* Orbital gateway: Fix infinite connection retry [jonm-okc, ntalbott]
* PayPal integration: Add support for MassPay IPN notifications [damonmorgan]
* Orbital gateway: Fix status of void result [jonm-okc]
* Add Redsys gateway [samlown]
* Cybersource gateway: Add support for subscription credit [fabiokr]
* Use Thor for generators [ntalbott]
* Psigate gateway: Add void support [samuelreh]

== Version 1.28.0 (August 10, 2012)

* PayPal Express: support non standard locale codes [Soleone]
* Litle: allow setting test mode per transaction [jduff]
* Add Banwire gateway [acolin]
* Authorize.Net CIM gateway: Move cardCode after order to comply with the XSD [davetron5000]
* Add WebMoney integration [Mehonoshin]
* EasyPay: Make symmetric with other integrations [nashby]
* Add Paysbuy integration [divineforest]
* Bogus gateway: Use last digit for pass/fail [mipearson]
* Elavon gateway: Separate from Viaklix, implement refund & void [duff]
* Orbital gateway: Update to API version 5.6 and add support for profile requests [rbarazi]

== Version 1.27.0 (August 10, 2012)

* Add First Data integration [courtland]
* Add WebPay integration [nashby]
* Add Suomen Maksuturva integration [akonan]
* Payway gateway: Fix card storage [BenZhang]
* Payflow Pro gateway: Add MaxFailPayments support [gregwinn]
* Add Paxum integration [Mehonoshin]
* Add Balanced gateway [mjallday]
* Plug'n Pay gateway: Add tests for partial capture [csaunders]
* Braintree Blue gateway: Add credit card details to responses [dougbradbury]
* PayPal gateway: Support for 'Full' refund type [kurenn]
* Worldpay: fix refund [jduff/omh]
* Add PxPay offsite integration [boourns]
* Wirecard: always capture 'authorization' transaction [ntalbott]
* Add rake task to verify ssl certs [boourns]

== Version 1.26.0 (July 6, 2012)

* Orbital gateway: fix broken requests by ensuring the order of XML elements matches their DTD [Soleone]
* CyberSource gateway: clean up formatting [ntalbott]