@@ -349,3 +349,7 @@ Balanced gateway (July 2012)
 A1Agregator (November 2012)
 
 * Roman Ivanilov (england)
+
+Liqpay integration (November 2012)
+
+* beorc
